--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,13 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - DATABASE_URL=mysql://root:password@db:3306/uide_db
-      - JWT_SECRET=supersecretkey_change_me_in_prod
+      # DATABASE_URL must be set in the .env file on the server
+      # Example: mysql://admin:password@aurora-endpoint:3306/uide_db
+      - DATABASE_URL=${DATABASE_URL}
+      - JWT_SECRET=${JWT_SECRET}
       - PORT=8000
-    depends_on:
-      - db
+    volumes:
+      - ./proyecto/uploads:/app/uploads
     networks:
       - app-network
     restart: always
@@ -29,23 +31,6 @@ services:
       - app-network
     restart: always
 
-  db:
-    image: mysql:8.0
-    container_name: uide_db
-    environment:
-      MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: uide_db
-    ports:
-      - "3306:3306"
-    volumes:
-      - db_data:/var/lib/mysql
-    networks:
-      - app-network
-    restart: always
-
 networks:
   app-network:
     driver: bridge
-
-volumes:
-  db_data:
